Fix Java version compatibility of previous commit